# claude-smart

./: .gitignore  .npmignore  ARCHITECTURE.md  DEVELOPER.md  EXPERIMENT.md  MANAGED_REFLEXIO.md  Makefile  README.md  TROUBLESHOOTING.md  package-lock.json  package.json  reflexio.lock.json
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.githooks/: pre-commit
docs/: 2026-07-06-caveman-savings-analysis-spec.md  2026-07-06-caveman-savings-analysis.md
plugin/: README.md  pyproject.toml
plugin/.claude-plugin/: plugin.json
plugin/.codex-plugin/: plugin.json
plugin/commands/: clear-all.md  dashboard.md  learn.md  restart.md  show.md
plugin/dashboard/: next.config.ts  package-lock.json  package.json
plugin/dashboard/app/: globals.css  layout.tsx
plugin/dashboard/app/api/claude-settings/: route.ts
plugin/dashboard/app/api/config/: route.ts
plugin/dashboard/app/api/health/: route.ts
plugin/dashboard/app/api/reflexio/[...path]/: route.ts
plugin/dashboard/app/api/rules/applied/: route.ts
plugin/dashboard/app/configure/: layout.tsx
plugin/dashboard/app/configure/env/: page.tsx
plugin/dashboard/app/configure/server/: page.tsx
plugin/dashboard/app/dashboard/: page.tsx
plugin/dashboard/app/playbooks/: page.tsx
plugin/dashboard/app/playbooks/[id]/: page.tsx
plugin/dashboard/app/preferences/: page.tsx
plugin/dashboard/app/preferences/[id]/: page.tsx
plugin/dashboard/app/profiles/: page.tsx
plugin/dashboard/app/profiles/[id]/: page.tsx
plugin/dashboard/app/rules/[id]/: page.tsx
plugin/dashboard/app/sessions/: page.tsx
plugin/dashboard/app/sessions/[sessionId]/: page.tsx
plugin/dashboard/app/skills/: page.tsx
plugin/dashboard/app/skills/project/[id]/: page.tsx
plugin/dashboard/app/skills/shared/[id]/: page.tsx
plugin/dashboard/components/: stall-banner.tsx
plugin/dashboard/components/common/: delete-learning-danger-zone.tsx  empty-state.tsx  learnings-badge.tsx  page-header.tsx  page-tabs.tsx  stat-card.tsx
plugin/dashboard/components/layout/: nav-items.ts  sidebar.tsx  top-bar.tsx
plugin/dashboard/hooks/: use-settings.tsx  use-stall-state.ts
plugin/dashboard/lib/: claude-settings-file.ts  config-file.ts  reflexio-client.ts  session-reader.ts  status.ts  types.ts
plugin/hooks/: codex-hooks.json  hooks.json
plugin/opencode/: assistant-buffer.ts  internal.ts  payload.ts  server.mts  tsconfig.json
plugin/scripts/: _codex_env.sh  _lib.sh  backend-log-runner.sh  backend-python-runner.py  backend-service.sh  cli.sh  codex-claude-compat  codex-claude-compat.cmd  codex-claude-compat.js  codex-claude-compat.py  codex-hook.js  dashboard-build.sh  dashboard-open.sh  dashboard-service.sh  ensure-plugin-root.sh  hook_entry.sh  opencode-claude-compat  opencode-claude-compat.cmd  opencode-claude-compat.js  smart-install.sh
plugin/skills/claude-smart/: SKILL.md
plugin/src/: README.md
plugin/src/claude_smart/: cli.py  context_format.py  context_inject.py  cs_cite.py  env_config.py  hook.py  hook_log.py  ids.py  internal_call.py  optimizer_assistant.py  publish.py  query_compose.py  reflexio_adapter.py  reflexio_backend.py  runtime.py  stall_banner.py  state.py
plugin/src/claude_smart/events/: post_tool.py  pre_tool.py  session_end.py  session_start.py  stop.py  user_prompt.py
scripts/: check-reflexio-lock.py  doctor-reflexio.py  release-with-reflexio.sh  setup-claude-smart.sh  setup-local-dev.sh  standalone-lock.sh  sync-reflexio-dep.py  use-local-reflexio.sh  vendor-reflexio.py
tests/: conftest.py  host_learning_harness.py  test_adapter.py  test_cli_clear_all.py  test_cli_clear_user.py  test_cli_install.py  test_cli_learn.py  test_cli_restart.py  test_cli_show.py  test_codex_support.py  test_context_format.py  test_cs_cite.py  test_dashboard_install.py  test_dashboard_managed_reflexio.py  test_events.py  test_hook_log.py  test_host_integration_e2e.py  test_ids.py  test_install_scripts.py  test_internal_call.py  test_opencode_support.py  test_optimizer_assistant.py  test_publish.py  test_reflexio_backend.py  test_reflexio_lock_script.py  test_stall_banner.py  test_stall_in_session_start.py  test_state.py
(+14 files in other folders)
